# HexVile

./: .gitignore  2a  CMakeLists.txt  README.md  player.cpp.bak  todo
.cache/clangd/index/: HexGrid.cpp.69DA22DB8564D902.idx  HexGrid.h.DFE8D6CF4844D9E4.idx  camera.cpp.0CF363A8A5D1A4F9.idx  debug.cpp.3C2949AB107A87DF.idx  debug.h.191CB7E135AE5125.idx  defines.h.C0985247AE8A2C68.idx  enums.h.03D2896DDFBD99B2.idx  game.cpp.DFABC30DAD065C6F.idx  game.h.020001A7DB3AD2D6.idx  main.cpp.C2CCD775E4726324.idx  tile_map.cpp.7558A12BA6B4BD09.idx  tile_map.h.4B6273A5894F459C.idx
assets/images/: Sprite-0001.ase
assets/shaders/: hit_flash.fs
includes/: GFX_manager.h  HexGrid.h  animation.h  camera.h  debug.h  debugger.h  defines.h  enums.h  font_handler.h  frame_context.h  game.h  graphics_manager.h  hex_grid.h  hex_tile_grid.h  input_handler.h  io_handler.h  item.h  item_db.h  item_handler.h  player.h  resource.h  spawn_rules.h  std_includes.h  structs.h  texture.h  texture_atlas.h  texture_handler.h  tile_details.h  tile_map.h  ui_handler.h  ui_layout.h
src/: GFX_manager.cpp  HexGrid.cpp  camera.cpp  debug.cpp  debugger.cpp  font_handler.cpp  game.cpp  graphics_manager.cpp  hex_grid.cpp  hex_tile_grid.cpp  input_handler.cpp  io_handler.cpp  item.cpp  item_handler.cpp  main.cpp  player.cpp  texture_handler.cpp  tile_map.cpp  ui_handler.cpp
